--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,9 +1,8 @@
-/* Reset básico */
 body, html, #root {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #ffffff; /* fondo blanco puro */
+    background-color: #ffffff;
   }
   body, html, #root, .login-page, .image-container {
     background-color: #ffffff !important;
@@ -124,7 +123,7 @@ body, html, #root {
 }
 .register-button-login {
   width: auto;
-  padding: 10px 38px; /* 🔽 Menor altura */
+  padding: 10px 38px; 
   background-color: #39B49E ;
   border: none;
   border-radius: 20px;
@@ -145,7 +144,7 @@ body, html, #root {
 
 .spinner-login {
   border: 3px solid #f3f3f3;
-  border-top: 3px solid #4285F4; /* Color Google */
+  border-top: 3px solid #4285F4;
   border-radius: 50%;
   width: 22px;
   height: 22px;
