--- a/src/components/DashboardAlumno.css
+++ b/src/components/DashboardAlumno.css
@@ -1272,7 +1272,7 @@
   cursor: default;
 }
 .btn-eliminar-eleccion {
-  background-color: #d32f2f;
+  background-color: #2e9e7f;
   color: white;
   padding: 10px 18px;
   border: none;
@@ -1282,7 +1282,7 @@
 }
 
 .btn-eliminar-eleccion:hover {
-  background-color: #b71c1c;
+  background-color: #238f72;
 }
 .contenedor-eliminar {
   display: flex;
