--- a/src/components/DashboardAlumno.css
+++ b/src/components/DashboardAlumno.css
@@ -283,6 +283,18 @@
     background-color: #f2f2f2;
     border-radius: 4px;
   }
+  .input-disabled-pru {
+    width: 100%;
+    padding: 9px 10px;
+    border: 1px solid #ccc;
+    background-color: #f3f4f6;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #5f5f5f;
+    cursor: not-allowed;
+  }
+
 .spinner-border-conformidad {
   display: inline-block;
   width: 1.2rem;
@@ -681,17 +693,17 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
 
- .plan-info {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 20px;
-    width: 100%;
-    max-width: 1200px;      
-    margin: 0 auto;         
-    padding: 0 20px;         
-    box-sizing: border-box;  
+.plan-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0px;
+  max-width: 1200px;
+  margin: 0 auto;       
+  padding-left: 80px;  
+  box-sizing: border-box;
 }
+
 
   .plan-icon {
     width: 350px;  
@@ -720,7 +732,8 @@
 
   .plan-details {
     flex: 3;
-    margin-left: -40px;
+    margin-left: 320px;
+    margin-top: 10px;
   }
 
   h2 {
@@ -819,7 +832,6 @@
   }
 }
 .select-filled {
-  
   background-color: #f3f4f6 !important; 
   font-weight: 500;
   border: 1px solid #CBD5E0; 
@@ -857,7 +869,7 @@
     background-color: #00576d;
   }
   .solicitar-revision-card {
-    margin: 30px auto;
+    margin: 20px auto 30px auto;
     padding: 25px 40px;
     background-color: #f9fbfd;
     border-radius: 10px;
@@ -1564,9 +1576,15 @@
 }
 .plan-icon-img {
   display: flex;
-  justify-content: flex-start;  
-  margin-left: -80px;           
+  justify-content: flex-start;
+  margin-left: 0px;
+  margin-top: -0px;   
+  margin-right: -200px;
+  width: 450px;
+  max-width: 450px;
+  flex-shrink: 0;
 }
+
 .btn-ver-ojo:hover {
   background: #edf2f7;
 }
@@ -1823,19 +1841,22 @@
     width: 100% !important;
   }
 
-.plan-icon-img {
-  display: flex;
-  justify-content: flex-start;
-  padding-left: 80px !important; 
-  width: 100%;
-}
+  .plan-icon-img {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 0px;
+    width: 100%;
+    max-width: 100% !important;
+    margin-right: 0 !important;
+    margin-top: 0 !important;
+    flex-shrink: 1;
+  }
 
   .plan-icon-img img {
-    max-width: 340px; 
-    height: auto;
-    display: block;
-    margin: 0 !important; 
+    width: 240px;  
+    height: 240px;
   }
+
   .plan-details {
     padding-left: 0 !important;
     margin-left: 0 !important;
@@ -2026,11 +2047,6 @@
 
 }
 
-@media (min-width: 1440px) {
-  .plan-info {
-    transform: translateX(140px); 
-  }
-}
 @media (min-width: 1440px) {
   .contenedor-boton-centro {
     transform: translateX(20px); 
